scale and transition values as variables

--- a/style.scss
+++ b/style.scss
@@ -455,7 +455,7 @@ ul.collection-mods-page-attrib-tooltip {
 .collection-thumbnail {
   position: relative;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.35);
-  transition: 100ms ease-out;
+  transition: $thumbnail-transition-duration ease-out;
 
   &.collection-remote {
 
@@ -546,7 +546,7 @@ ul.collection-mods-page-attrib-tooltip {
 
   &:hover {
 
-    transform: scale(1.05);
+    transform: scale($thumbnail-zoom-scale);
 
     .bottom {
       &.editable {
