--- a/style.scss
+++ b/style.scss
@@ -100,6 +100,8 @@ $collection-mod-image-height: 122px;
           border-radius: $panel-border-radius;
           border: 1px solid $panel-default-border;
           flex: 1 2 100%;  
+
+
         }
 
         h4,
@@ -1773,6 +1775,7 @@ ul.collection-mods-page-attrib-tooltip {
   .panel-heading {
     display: flex;
     align-items: center;
+    background-color: transparent;
   }
 }
 
@@ -1798,7 +1801,7 @@ ul.collection-mods-page-attrib-tooltip {
 }
 
 #collection-instructions-area {
-  //height: 100%;
+  height: 100%;
   resize: none;
 }
 
@@ -1806,6 +1809,13 @@ ul.collection-mods-page-attrib-tooltip {
     /* align-self: end; */
     display: flex;
     justify-content: flex-end;
+}
+
+.collection-instructions-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  resize: none;
 }
 
 .textarea-install-collection-instructions {
