fixed inability to scroll down in the overrides tab

--- a/style.scss
+++ b/style.scss
@@ -1791,6 +1791,7 @@ ul.collection-mods-page-attrib-tooltip {
 }
 
 #collection-file-overrides {
+  overflow-y: auto;
   .table {
     width: fit-content;
 
