--- a/style.scss
+++ b/style.scss
@@ -1737,7 +1737,7 @@ ul.collection-mods-page-attrib-tooltip {
   padding: 2px 8px;
   width: fit-content;
   margin: 0 0 7px 0;
-  font-family: 'Roboto';
+  font-family: $font-family-base;
   font-weight: 600;
   font-size: smaller;
   height: fit-content;
